# receipt-ocr

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 69b106eff1e2_initial.py  aabf52740fe0_add_recipient_name_and_error_message_to_.py
docs/: ARCHITECTURE.md
src/: main.py
src/api/: constants.py  dependencies.py
src/api/routes/: receipts.py
src/core/: config.py  database.py  logging.py
src/extraction/: classifier.py
src/extraction/extractors/: __init__.py  yape.py
src/models/: receipt.py
src/ocr/: engine.py
src/repositories/: receipt_repository.py
src/schemas/: receipt.py
src/services/: processing_service.py  upload_service.py
tests/: conftest.py
tests/e2e/: test_yape_real.py
tests/integration/: conftest.py  test_processing_endpoint.py  test_receipt_repository.py  test_receipts_api.py
tests/unit/: test_classifier.py  test_config.py  test_yape_extractor.py
